--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@babel/core": "^7.26.7",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.2",
     "@sanity/vision": "^3.17.0",
     "@stripe/stripe-js": "^2.1.7",
     "@types/node": "20.8.2",
@@ -31,6 +34,7 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
+    "react-tooltip": "^5.28.0",
     "sanity": "^3.17.0",
     "stripe": "^13.11.0",
     "swr": "^2.2.4",
