--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-tooltip": "^5.28.0",
     "sanity": "^3.17.0",
     "stripe": "^13.11.0",
+    "swiper": "^11.2.2",
     "swr": "^2.2.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
